tests/ui/iterators/fold-iterator-errorrs-issue-23966.rs
fn main() {
    "".chars().fold(|_, _| (), ());
    //~^ ERROR E0277
}

// https://github.com/rust-lang/rust/issues/23966
